k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-products
spec:
  rules:
  - host: shop.com
    http:
      paths:
      - path: /api/products
        pathType: Prefix
        backend:
          service:
            name: products-service
            port:
              number: 3000
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cart
spec:
  rules:
  - host: shop.com
    http:
      paths:
      - path: /api/cart
        pathType: Prefix
        backend:
          service:
            name: cart-service
            port:
              number: 3001
  ingressClassName: nginx
